// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders no close button in "deleted" variant 1`] = `
<div
  class="Pill Pill--deleted my-extra-class"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="test"
    class="Pill__label Pill__label--deleted"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component 1`] = `
<div
  class="Pill Pill--idle"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="test"
    class="Pill__label Pill__label--idle"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component in "active" variant 1`] = `
<div
  class="Pill Pill--active my-extra-class"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="test"
    class="Pill__label Pill__label--active"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component in "deleted" variant 1`] = `
<div
  class="Pill Pill--deleted my-extra-class"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="test"
    class="Pill__label Pill__label--deleted"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component in "idle" variant by default 1`] = `
<div
  class="Pill Pill--idle my-extra-class"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="test"
    class="Pill__label Pill__label--idle"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component with a close button 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #606C7C;
  height: 18px;
  width: 18px;
}

<div
  class="Pill Pill--idle my-extra-class"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="test"
    class="Pill__label Pill__label--idle"
    title="test"
  >
    test
  </span>
  <button
    aria-label="close"
    class="Pill__close-button Pill__close-button--idle"
    type="button"
  >
    <span
      class="emotion-1"
      tabindex="-1"
    >
      <svg
        class="emotion-0 Pill__icon--idle"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`renders the component with a dragging handle 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #606C7C;
  height: 18px;
  width: 18px;
}

<div
  class="Pill Pill--idle my-extra-class"
  data-test-id="cf-ui-pill"
>
  <span
    class="Pill__drag-icon"
  >
    <svg
      class="emotion-0 Pill__icon--idle"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
  </span>
  <span
    aria-label="test"
    class="Pill__label Pill__label--idle"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component with a test id 1`] = `
<div
  class="Pill Pill--idle my-extra-class"
  data-test-id="test-id"
>
  <span
    aria-label="test"
    class="Pill__label Pill__label--idle"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="Pill Pill--idle my-extra-class"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="test"
    class="Pill__label Pill__label--idle"
    title="test"
  >
    test
  </span>
</div>
`;
